Fixed z-index of the logo

--- a/css/sass/modules/hero.sass
+++ b/css/sass/modules/hero.sass
@@ -6,6 +6,7 @@
 	margin-top: 20px
 	position: fixed
 	width: 100%
+	z-index: 999
 	#logo
 		a
 			background: url(../img/logo.svg) no-repeat
